--- a/about.html
+++ b/about.html
@@ -21,15 +21,15 @@
                 </div>
             <div class="row justify-content-center">
                 <div class="col-4">
-                    <p>sini kami menjelaskan parwisata yang terletak dilombok tengah,parawisata yang ada di lombok 
-                        tengah adalah salah satu tempat parawisata yang indah.dan banyak orang yang dikunjungi di parawisata
-                         lombok tengah tersebut.dan sampai sekarang parawisata yang terletak lombok tengah pada saat ini
-                         sangat populer.dan banyak juga pengehasilan dari parawisata yang terletak yang ada dilombok tengah.</p>
+                    <p>Disini kami menjelaskan pariwisata yang terletak dilombok tengah,pariwisata yang ada di lombok 
+                        tengah adalah salah satu tempat pariwisata yang indah dan banyak orang yang dikunjungi di pariwisata
+                         lombok tengah tersebut. Sampai sekarang pariwisata yang terletak lombok tengah pada saat ini
+                         sangat populer dan banyak juga penghasilan dari pariwisata yang terletak yang ada dilombok tengah.</p>
                 </div>
                 <div class="col-4">
-                    <p>kami menjelaskan hal ngatif dari parawisata yang terletak di lombok tengah,hal yang negatiff dari perawisata 
-                        lombok dan banyak yang menyatakan bahwa parawisata lombok  
-                        pada saat ini sebegai kambng hitam dan perannya yang juga bsar dalam mengembangkan perekonomian daerah.</p>
+                    <p>Kami menjelaskan hal negatif dari pariwisata yang terletak di lombok tengah,hal yang negatif dari pariwisata 
+                        lombok dan banyak yang menyatakan bahwa pariwisata lombok  
+                        pada saat ini sebagai kambing hitam dan perannya yang juga besar dalam mengembangkan perekonomian daerah.</p>
                 </div>
             </div>
         </div>
