--- a/about.html
+++ b/about.html
@@ -163,8 +163,6 @@
         <div class="container ">
             <h4 class="text-center fort-weight-bold m-4">About</h4>
             <div class="row mt-4">
-                </div>
-                </div>
             <div class="row justify-content-center">
                 <div class="col-4">
                     <p>Disini kami menjelaskan pariwisata yang terletak dilombok tengah,pariwisata yang ada di lombok 
@@ -178,9 +176,10 @@
                         pada saat ini sebagai kambing hitam dan perannya yang juga besar dalam mengembangkan perekonomian daerah.</p>
                 </div>
             </div>
+            <h4 class="text-center fort-weight-bold m-4">Review</h4>
         </div>
-    </section>
-    <div class="feedback">
+         
+        <div class="feedback">
     <div class="rating">
       <input type="radio" value="5" name="rating" id="rating-5">
       <label for="rating-5"></label>
@@ -281,4 +280,7 @@
       </div>
     </div>
   </div>
+    </section>
+
+    
     <!-- Akhir About-->a
